# OpenReview

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: python.yml
docs/: architecture.md
examples/: mobile_app.yaml  sample.yaml  startup.yaml
prompts/: business.md  market.md  risk.md  technology.md  ux.md
src/: __init__.py
src/core/: __init__.py  base_reviewer.py  config.py  models.py
src/providers/: __init__.py  base_provider.py  mock_provider.py  openai_provider.py
src/report/: __init__.py  generator.py
src/reviewers/: __init__.py  business.py  market.py  risk.py  technology.py  ux.py
tests/: conftest.py  test_provider.py  test_report.py  test_reviewers.py
