[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openreview"
version = "0.1.0"
description = "An open-source AI framework for structured idea and project proposal reviews using configurable expert agents."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "corykim2", email = "vibraille06@gmail.com" }]
keywords = ["ai", "review", "llm", "agents", "project-evaluation", "startup"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
openai = ["openai>=1.30"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "pylint>=3.0",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.scripts]
openreview = "main:main"

[project.urls]
Homepage = "https://github.com/corykim2/OpenReview"
Repository = "https://github.com/corykim2/OpenReview"
"Bug Tracker" = "https://github.com/corykim2/OpenReview/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing --cov-fail-under=80"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pylint.main]
py-version = "3.12"
disable = [
    "C0114",  # missing-module-docstring (covered by file-level docstrings)
    "R0903",  # too-few-public-methods (acceptable for data classes & interfaces)
]

[tool.pylint.format]
max-line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
